GS-3287 fixed alignment in ie6

--- a/src/webapp/res/css/school/overview.css
+++ b/src/webapp/res/css/school/overview.css
@@ -213,13 +213,14 @@ hr { /* has IE 7 equivalent */
 }
 
 .stars {
-	margin: 7px 0 0 0;
+    margin: 7px 0 0 0;
+    _margin: 9px 0 0 0;
 	border: 0;
 }
 
 .rateIt { /* has IE 7 equivalent */
 	margin: 14px 0 10px 0;
-	_margin: 13px 0 6px 0;
+	_margin: 12px 0 8px 0;
 	border: 0;
 }
 
@@ -254,7 +255,7 @@ hr { /* has IE 7 equivalent */
 
 #ratingsBoth #rating_gs img { /* has IE 7 equivalent */
 	margin-bottom: 10px;
-	_margin-bottom: 6px; /* IE 6 hack */
+	_margin-bottom: 9px; /* IE 6 hack */
 }
 
 #ratingsBoth #rating_parent { /* has IE 7 equivalent */
@@ -330,14 +331,14 @@ hr { /* has IE 7 equivalent */
 
 #ratingsGSOnly #rating_gs img { /* has IE 7 equivalent */
 	margin-bottom: 10px;
-	_margin-bottom: 12px; /* IE 6 hack */
+	_margin-bottom: 9px; /* IE 6 hack */
 }
 
 #ratingsGSOnly #rating_parent { /* has IE 7 equivalent */
 	float: right;
 	text-align: center;
 	margin: 29px 37px 0 0;
-	_margin: 34px 15px 5px 0; /* IE 6 hack */
+	_margin: 34px 15px 6px 0; /* IE 6 hack */
 	width: 102px;
 	_height: 109px; /* IE 6 hack */
 }
